gears-gke/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy
          image: caddy/caddy
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /etc/caddy
              name: caddy-config
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-config
