gears-gke/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
  - name: http
    port: 80
    targetPort: http
